test/tests/stages/7_compound_statements/valid/hidden_then_visible.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: b
                  None: 
                  Int: 
                  None: 
            CS: 
              CCompound: 
                CB: 
                  List[3]: 
                    CS: 
                      CExpression: 
                        CAssignment: 
                          None: 
                          CVar: 
                            TIdentifier: a
                            None: 
                          CUnary: 
                            CNegate: 
                            CConstant: 
                              CConstInt: 
                                TInt: 4
                              None: 
                            None: 
                          None: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: a
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 7
                              None: 
                            None: 
                          Int: 
                          None: 
                    CS: 
                      CExpression: 
                        CAssignment: 
                          None: 
                          CVar: 
                            TIdentifier: b
                            None: 
                          CBinary: 
                            CAdd: 
                            CVar: 
                              TIdentifier: a
                              None: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                            None: 
                          None: 
            CS: 
              CReturn: 
                CBinary: 
                  CAnd: 
                  CBinary: 
                    CEqual: 
                    CVar: 
                      TIdentifier: b
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 8
                      None: 
                    None: 
                  CBinary: 
                    CEqual: 
                    CVar: 
                      TIdentifier: a
                      None: 
                    CUnary: 
                      CNegate: 
                      CConstant: 
                        CConstInt: 
                          TInt: 4
                        None: 
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
